Stackless-Python News
+++++++++++++++++++++

This file documents user visible changes to the Stackless extension of C-Python.
For other changes see Misc/NEWS.

What's New in Stackless 3.X.X?
==============================

*Release date: 20XX-XX-XX*

- https://github.com/stackless-dev/stackless/issues/297
  Stackless now works on Linux ARM64 (architecture "aarch64").

- https://github.com/stackless-dev/stackless/issues/296
  It is now possible to cross-compile Stackless for Windows on ARM and ARM64.

- https://github.com/stackless-dev/stackless/issues/295
  Add prefix "_slp" to structure names without a prefix. The following structs
  were renamed: _channel, _cframe, _tasklet, _unwindobject and _bomb.

- https://github.com/stackless-dev/stackless/issues/290
  The newly added PEP-590 Vectorcall protocol (bpo-36974) requires changes to
  the Stackless protocol. The new mcros STACKLESS_VECTORCALL_xxx() must be used
  to add soft-switching to vectorcall functions.

- https://github.com/stackless-dev/stackless/issues/278
  Stackless now uses Stackman https://github.com/stackless-dev/stackman for
  stack switching / hard tasklet switching. The legacy stack switching code
  is still available. See 'readme.txt' for details.

- https://github.com/stackless-dev/stackless/issues/254
  The Stackless version is now "3.8".

- https://github.com/stackless-dev/stackless/issues/288
  Starting from commit b73166e building Stackless on Windows was broken. This
  has been fixed.

- https://github.com/stackless-dev/stackless/issues/287
  The experimental STACKLESS_SPY feature has been removed.

- https://github.com/stackless-dev/stackless/issues/283
  Platform dependent source code is now completely in "Stackless/platf". The
  API header files do not depend on the platform any longer and the header
  "pycore_slp_platformselect.h" does not exist any more.

- https://github.com/stackless-dev/stackless/issues/281
  Per tasklet profiling and tracing state information is now stored in the