@@ -4171,34 +4171,67 @@ handle_unwinding(int lineno, PyFrameObject *f,
 }
 
 PyObject*
-PyEval_EvalFrameEx_slp(PyFrameObject *f, int throwflag, PyObject *retval_arg)
+PyEval_EvalFrameEx_slp(PyFrameObject *f, int throwflag, PyObject *retval)
 {
     PyThreadState *tstate = _PyThreadState_GET();
     int executing = f->f_executing;
     if (executing == SLP_FRAME_EXECUTING_INVALID) {
         --tstate->recursion_depth;
-        return slp_cannot_execute((PyCFrameObject *)f, "PyEval_EvalFrameEx_slp", retval_arg);
-    } else if (executing == SLP_FRAME_EXECUTING_NO) {
+        return slp_cannot_execute((PyCFrameObject *)f, "PyEval_EvalFrameEx_slp", retval);
+    } else if (executing == SLP_FRAME_EXECUTING_NO ||
+               executing == SLP_FRAME_EXECUTING_HOOK) {
         /* Processing of a frame starts here */
 
         /* Check, if an extension module has changed tstate->interp->eval_frame.
          * PEP 523 defines this function pointer as an API to customise the frame
-         * evaluation. Stackless can not support this API. In order to prevent
-         * undefined behavior, we terminate the interpreter.
+         * evaluation. Stackless support this API and calls it, if it starts the
+         * evaluation of a frame.
          */
-        if (tstate->interp->eval_frame != _PyEval_EvalFrameDefault)
+        if (executing == SLP_FRAME_EXECUTING_NO &&
+                tstate->interp->eval_frame != _PyEval_EvalFrameDefault) {
+            Py_XDECREF(retval);
+            f->f_executing = SLP_FRAME_EXECUTING_HOOK;
+            retval = tstate->interp->eval_frame(f, throwflag);
+            /* There are two possibilities:
+             *  - Either the hook-functions delegates to _PyEval_EvalFrameDefault
+             *      Then the frame transfer protocol is observed, SLP_STORE_NEXT_FRAME(tstate, f->f_back)
+             *      has been called.
+             *  - Or the the hook function does not call _PyEval_EvalFrameDefault
+             *      Then the frame transfer protocol is (probably) violated and the code just
+             *      assigned tstate->frame = f->f_back.
+             *
+             * To distinguish both cases, we look a f->f_executing. If the value is still
+             * SLP_FRAME_EXECUTING_HOOK, then _PyEval_EvalFrameDefault wasn't called for frame f.
+             */
+            if (f->f_executing != SLP_FRAME_EXECUTING_HOOK)
+                /* _PyEval_EvalFrameDefault was called */
+                return retval;
+            /* Try to repair the frame reference count.
+             * It is possible in case of a simple tstate->frame = f->f_back */
+            if (tstate->frame == f->f_back) {
+                SLP_STORE_NEXT_FRAME(tstate, f->f_back);
+                return retval;
+            }
+            /* Game over */
             Py_FatalError("An extension module has set a custom frame evaluation function (see PEP 523).\n"
-                          "Stackless Python does not support the frame evaluation API defined by PEP 523.\n"
+                          "Stackless Python does not completely support the frame evaluation API defined by PEP 523.\n"
                           "The programm now terminates to prevent undefined behavior.\n");
+        } else if (executing == SLP_FRAME_EXECUTING_HOOK) {
+            f->f_executing = SLP_FRAME_EXECUTING_NO;
+        }
 
         if (SLP_CSTACK_SAVE_NOW(tstate, f)) {
             /* Setup the C-stack and recursively call PyEval_EvalFrameEx_slp with the same arguments.
              * SLP_CSTACK_SAVE_NOW(tstate, f) will be false then.
              */
-            return slp_eval_frame_newstack(f, throwflag, retval_arg);
+            return slp_eval_frame_newstack(f, throwflag, retval);
         }
     }
-    return slp_eval_frame_value(f, throwflag, retval_arg);
+
+    /* This is the only call of static slp_eval_frame_value.
+     * An optimizing compiler will eliminate this call
+     */
+    return slp_eval_frame_value(f, throwflag, retval);
 }
 
 
@@ -4261,6 +4294,7 @@ _PyEval_EvalFrameDefault(PyFrameObject *f, int throwflag)
     }
     if (PyFrame_Check(f)) {
         if (!(f->f_executing == SLP_FRAME_EXECUTING_NO ||
+              f->f_executing == SLP_FRAME_EXECUTING_HOOK ||
                 SLP_FRAME_IS_EXECUTING(f))) {
             PyErr_BadInternalCall();
             return NULL;
@@ -4281,6 +4315,10 @@ _PyEval_EvalFrameDefault(PyFrameObject *f, int throwflag)
         Py_INCREF(Py_None);
         retval = Py_None;
     }
+
+    if (f->f_executing == SLP_FRAME_EXECUTING_HOOK)
+        /* Used, if a eval_frame-hook is installed */
+        return PyEval_EvalFrameEx_slp(f, throwflag, retval);
 
     /* test, if the stackless system has been initialized. */
     if (tstate->st.main == NULL) {
